--- a/Hanna Kuppas/css/style.css
+++ b/Hanna Kuppas/css/style.css
@@ -94,3 +94,14 @@ section.sobre{
     border-radius:50%;
     background-color: indianred;
 }
+
+.content{
+    height: 520px;
+    width: 935px;
+    border-radius: 20px;
+    overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+}
