--- a/Hanna Kuppas/css/style.css
+++ b/Hanna Kuppas/css/style.css
@@ -167,9 +167,9 @@ input{
     margin-left: -80%;
 }
 
-#slide4:checked ~ .s1 {
+/** #slide4:checked ~ .s1 {
     margin-left: -100%;
-}
+} **/
 
 /*/* #slide4:checked ~ .s1 {
     margin-left: -120%;
