--- a/Hanna Kuppas/css/styleAgenda.css
+++ b/Hanna Kuppas/css/styleAgenda.css
@@ -147,3 +147,18 @@ th{
 tr:nth-child(even){
   background: #ddd;
 }
+
+ul.pagination {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+
+ul.pagination li {display: inline;}
+
+ul.pagination li a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
