--- a/Hanna_Kuppas/css/styleAgenda.css
+++ b/Hanna_Kuppas/css/styleAgenda.css
@@ -56,8 +56,8 @@ header{
 }
 
 .search-box{
-  position: absolute;
-  top: 20%;
+  position: fixed;
+  top: 11rem;
   left: 50%;
   transform: translate(-50%,-50%);
   background: indianred;
@@ -162,3 +162,10 @@ ul.pagination li a {
   padding: 8px 16px;
   text-decoration: none;
 }
+aside {
+  overflow: hidden;
+  overflow-y: scroll;
+  height: 100%;
+  border: none;
+}
+
