--- a/Hanna_Kuppas/css/style.css
+++ b/Hanna_Kuppas/css/style.css
@@ -57,7 +57,7 @@ section.sobre{
 }
 
 .texto-sobre{
-    margin-top:100px;
+    margin-top:-50px;
 
 }
 
@@ -94,3 +94,83 @@ section.sobre{
     border-radius:50%;
     background-color: indianred;
 }
+
+.content{
+    height: 356px;
+    width: 612px;
+    border-radius: 20px;
+    overflow: hidden;
+    position: absolute;
+    top: 77%;
+    left: 35%;
+    transform: translate( -50%, -50%);
+}
+
+.navigation{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+}
+
+.bar{
+    width: 70px;
+    height: 17px;
+    border: 2px solid #fff;
+    margin: 6px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.bar:hover {
+    background-color: #fff;
+}
+
+input{
+    display: none;
+}
+
+.slides{
+    display: flex;
+    width: 500%;
+    height: 100%;
+}
+
+.slide{
+    width: 20%;
+    transition: .6s;
+}
+
+.slide img{
+    width: 100%;
+    height: 100%;
+}
+
+#slide1:checked ~ .s1 {
+    margin-left: 0;
+}
+
+#slide2:checked ~ .s1 {
+    margin-left: -20%;
+}
+
+#slide3:checked ~ .s1 {
+    margin-left: -40%;
+}
+
+#slide4:checked ~ .s1 {
+    margin-left: -60%;
+}
+
+#slide4:checked ~ .s1 {
+    margin-left: -80%;
+}
+
+/** #slide4:checked ~ .s1 {
+    margin-left: -100%;
+} **/
+
+/*/* #slide4:checked ~ .s1 {
+    margin-left: -120%;
+} **/
